crates/moire-source-context/src/snapshots/moire_source_context__tests__function_with_many_statements.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# example()
# scope 6..6

   6 >|     let target = 5;
