crates/moire-source-context/src/snapshots/moire_source_context__tests__function_with_many_statements.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# fn example()
# scope 5..7

   5  |     let d = 4;
   6 >|     let target = 5;
   7  |     let f = 6;
