crates/moire-source-context/src/snapshots/moire_source_context__tests__impl_block_with_methods.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# Foo::target_method(&self)
# scope 8..8

   8 >|         println!("target");
