crates/moire-source-context/src/snapshots/moire_source_context__tests__long_match_elides_body.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# process(y: Option<u32>)
# scope 2..12

   2 >|     let x = match y {
      | ...
  12  |     };
