crates/moire-source-context/src/snapshots/moire_source_context__tests__long_match_elides_body.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# fn process(y: Option<u32>)
# scope 2..13

   2 >|     let x = match y {
   3  |         Some(1) => 1,
   4  |         Some(2) => 2,
   5  |         Some(3) => 3,
   6  |         Some(4) => 4,
   7  |         Some(5) => 5,
   8  |         Some(6) => 6,
   9  |         Some(7) => 7,
  10  |         Some(8) => 8,
  11  |         _ => 0,
  12  |     };
  13  |     println!("{x}");
