crates/moire-source-context/src/snapshots/moire_source_context__tests__omits_fn_signature.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# async fn run( session: &mut Session, permit: Permit, ) -> Result<(), String>
# scope 7..12

   7  |     moire::task::spawn(
   8  |         async move {
      | ...
  10  |         },
  11  |     )
  12 >|     .named("permit_waiter");
