crates/moire-source-context/src/snapshots/moire_source_context__tests__omits_fn_signature.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# async run(session: &mut Session, permit: Permit) -> Result<(), String>
# scope 6..13

   6  |     let before = 2;
   7  |     moire::task::spawn(
   8  |         async move {
   9  |             work().await;
  10  |         },
  11  |     )
  12 >|     .named("permit_waiter");
  13  |     let after = 3;
