crates/moire-source-context/src/snapshots/moire_source_context__tests__single_stmt_closure_target_inside.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# fn outer()
# scope 4..6

   4  |     let c = vec.iter().map(|x| {
      | ...
   6  |     });
